[package]
name = "fomu-rt"
version = "0.0.5"
repository = "https://github.com/im-tomu/fomu-rt"
authors = ["Sean Cross <sean@xobs.io>", "The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "no-std"]
description = "Minimal runtime / startup for RISC-V on Fomu"
keywords = ["riscv", "runtime", "startup", "fomu"]
license = "ISC"

[dependencies]
r0 = "0.2.2"
vexriscv = "0.0"
riscv-rt-macros = { path = "macros", version = "0.1.6" }

[features]
inline-asm = ["vexriscv/inline-asm"]

[dev-dependencies]
vexriscv = "0.0.1"
panic-halt = "0.2.0"
